--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "prepare": "husky install",
+    "test": "ng test --browsers=ChromeHeadlessCI --progress=false --watch=false --code-coverage --source-map=false",
+    "full-test": "ng test --code-coverage",
+    "lint": "ng lint --fix --max-warnings 10",
+    "lint-no-fix": "ng lint --max-warnings 10",
+    "prettier": "pretty-quick --pattern \"src/**/*.{ts,js,scss,html}\" --staged"
   },
   "private": true,
   "dependencies": {
@@ -24,15 +29,32 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.1",
+    "@angular-eslint/builder": "16.1.2",
+    "@angular-eslint/eslint-plugin": "16.1.2",
+    "@angular-eslint/eslint-plugin-template": "16.1.2",
+    "@angular-eslint/schematics": "16.1.2",
+    "@angular-eslint/template-parser": "16.1.2",
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-ngrx": "^2.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^2.7.1",
+    "prettier-eslint": "^15.0.1",
+    "pretty-quick": "^3.1.3",
     "typescript": "~5.1.3"
   }
 }
