--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "prepare": "husky install",
-    "test": "ng test --browsers=ChromeHeadlessCI --progress=false --watch=false --code-coverage --source-map=false",
+    "test": "ng test  --progress=false --watch=false --code-coverage --source-map=false",
     "full-test": "ng test --code-coverage",
     "lint": "ng lint --fix --max-warnings 10",
     "lint-no-fix": "ng lint --max-warnings 10",
